--- a/WebAppExamples/11.3 TinDog Project/css/style.css
+++ b/WebAppExamples/11.3 TinDog Project/css/style.css
@@ -21,8 +21,10 @@
   border-radius: 0;
 }
 
-.bi{
-  border-radius: 5%
+.icon-square {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.75rem;
 }
 
 
